@@ -1,3 +1,7 @@
+2008-08-06  Christian Thalinger  <twisti@complang.tuwien.ac.at>
+
+	* Harness.java (parseTags): Close files after parsing.
+
 2008-07-30  Christian Thalinger  <twisti@complang.tuwien.ac.at>
 
 	* gnu/testlet/java/lang/Process/destroy.java: New test.
